Mon Jun 18 19:12:58 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>

        * DDS_TAO.mwc:

          Added the MPC/config to the include path.
          Use ace.mpc since it is the only library
          we want to use from ace directory.


Mon Jun 18 17:37:01 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tests/transport/reliable_multicast/reliable_multicast.mpc:

          Changed an "includes =" to "includes +=".  This was a typo from last
          Thursday's commit.

Mon Jun 18 15:25:36 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * performance-tests/DCPS/TransportLatency/TransportLatency.mpc:

          Added an 'after' for the DummyTcp library.

Mon Jun 18 15:10:50 UTC 2007  Wallace Zhang  <zhang_w@ociweb.com>

        * performance-tests/DCPS/TransportLatency/Messenger.idl:
        * performance-tests/DCPS/TransportLatency/Writer.cpp:

          Defined the time_t struct in the idl instead of using
          DDS::Time_t to resolve the compile errors in the
          built_in_topics=0 build.

Mon Jun 18 14:56:51 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * examples/DCPS/DistributedContent/DistributedContent.mpc:

          Added back the IDL_Files section, this is needed after all.

Mon Jun 18 14:11:11 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * examples/DCPS/DistributedContent/DistributedContent.mpc:

          Simplified the mpc file and added 'requires += built_in_topics'.

        * examples/DCPS/DistributedContent/run_test.pl:

          Removed a stray '-' on a line by itself.

Sat Jun 16 17:36:10 MST 2007  Trevor Fields  <fields_t@ociweb.com>

        * examples/DCPS/DistributedContent/main.cpp:

          Fixed warning about no end of line.

Fri Jun 15 21:39:34 UTC 2007  Trevor Fields  <fields_t@ociweb.com>

        * examples/DCPS/DistributedContent/AbstractionLayer.cpp:
        * examples/DCPS/DistributedContent/AbstractionLayer.h:
        * examples/DCPS/DistributedContent/ApplicationLevel.cpp: